first modification after meeting with client

--- a/template_one/client/billing.html
+++ b/template_one/client/billing.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <style>
         :root { 
-            --primary-wine: #800020; 
+            --primary-wine: #3399FF; 
             --sidebar-width: 260px; 
             --bg-light: #f8f9fa;
         }
@@ -52,7 +52,7 @@
         /* CONTENT AREA */
         .main-content { margin-left: var(--sidebar-width); padding: 30px; }
         .btn-wine { background: var(--primary-wine); color: white; border: none; }
-        .btn-wine:hover { background: #a30029; color: white; }
+        .btn-wine:hover { background: #87CEEB; color: white; }
         
         .invoice-card { 
             background: white;
@@ -62,7 +62,7 @@
         }
         
         .balance-card {
-            background: linear-gradient(135deg, #800020 0%, #a30029 100%);
+            background: linear-gradient(135deg, #87CEEB 0%, #64A0C8 100%);
             color: white;
             border: none;
             border-radius: 15px;
