--- a/template_one/client/dashboard.html
+++ b/template_one/client/dashboard.html
@@ -10,8 +10,8 @@
     
     <style>
         :root {
-            --primary-wine: #800020;
-            --accent-red: #a30029;
+             --primary-wine: #3399FF;
+            --accent-red: #87CEEB;
             --sidebar-width: 260px;
             --bg-light: #f8f9fa;
         }
