--- a/template_one/contact.html
+++ b/template_one/contact.html
@@ -11,8 +11,8 @@
     
     <style>
         :root {
-            --primary-wine: #800020; /* Dark Wine Red */
-            --accent-red: #a30029;
+            --primary-wine: #64A0C8;
+            --accent-red: #87CEEB;
             --glass-bg: rgba(255, 255, 255, 0.95);
             --glass-border: rgba(128, 0, 32, 0.2);
             --text-dark: #2d2d2d;
@@ -182,7 +182,7 @@
         <div class="row g-5">
             <div class="col-lg-6" data-aos="fade-right">
                 <div class="glass-card p-4 p-md-5">
-                    <h3 class="mb-4" style="color: var(--primary-wine);">Request a Quote</h3>
+                    <h3 class="mb-4" style="color: var(--primary-wine);">Send Us a Message</h3>
                     <form>
                         <div class="mb-3">
                             <label class="form-label fw-600">Full Name</label>
