--- a/template_one/login.html
+++ b/template_one/login.html
@@ -11,8 +11,8 @@
     
     <style>
         :root {
-            --primary-wine: #800020;
-            --accent-red: #a30029;
+            --primary-wine: #64A0C8;
+            --accent-red: #87CEEB;
             --text-dark: #2d2d2d;
         }
 
