--- a/template_one/client/reports.html
+++ b/template_one/client/reports.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <style>
         :root { 
-            --primary-wine: #800020; 
+             --primary-wine: #3399FF;
             --sidebar-width: 260px; 
             --bg-light: #f4f6f9;
         }
@@ -67,7 +67,7 @@
             border: 1px dashed #dee2e6;
         }
         .btn-wine { background: var(--primary-wine); color: white; border: none; }
-        .btn-wine:hover { background: #a30029; color: white; }
+        .btn-wine:hover { background: #87CEEB; color: white; }
     </style>
 </head>
 <body>
