--- a/template_one/client/support.html
+++ b/template_one/client/support.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <style>
         :root { 
-            --primary-wine: #800020; 
+             --primary-wine: #3399FF;
             --sidebar-width: 260px; 
             --bg-light: #f8f9fa;
         }
@@ -52,7 +52,7 @@
         /* CONTENT AREA */
         .main-content { margin-left: var(--sidebar-width); padding: 30px; }
         .btn-wine { background: var(--primary-wine); color: white; border: none; }
-        .btn-wine:hover { background: #a30029; color: white; }
+        .btn-wine:hover { background: #87CEEB; color: white; }
         
         .support-box { border: none; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
         
