--- a/template_one/staff/system_admin.html
+++ b/template_one/staff/system_admin.html
@@ -10,7 +10,7 @@
     <style>
         :root { 
             --admin-navy: #1a1a2e; 
-            --primary-wine: #800020;
+            --primary-wine: #64A0C8;
             --sidebar-width: 260px; 
             --bg-light: #f4f7f6;
         }
@@ -66,7 +66,7 @@
 
         .main-content { margin-left: var(--sidebar-width); padding: 30px; }
         .btn-wine { background: var(--primary-wine); color: white; border: none; }
-        .btn-wine:hover { background: #600018; color: white; }
+        .btn-wine:hover { background: #87CEEB; color: white; }
         
         .admin-card { border: none; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
         .log-entry { font-family: 'Courier New', monospace; font-size: 0.8rem; border-left: 3px solid #ddd; padding-left: 10px; margin-bottom: 8px; }
