second modification after meeting. added Nigerian images and worked on the payment integration

--- a/template_one/about_us.html
+++ b/template_one/about_us.html
@@ -39,7 +39,7 @@
         /* Tagline Hero */
         .about-hero {
             background: linear-gradient(rgba(70, 130, 180, 0.4), rgba(135, 206, 235, 0.4)), 
-                        url('https://images.unsplash.com/photo-1578575437130-527eed3abbec?auto=format&fit=crop&q=80&w=1920');
+                        url('images/61190.png');
             background-size: cover;
             background-position: center;
             padding: 120px 0;
@@ -172,7 +172,7 @@
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="position-relative">
-                        <img src="images/2151998729.jpg" class="img-fluid rounded-4 shadow-lg" alt="Lagos Delivery Fleet">
+                        <img src="images/61189.png" class="img-fluid rounded-4 shadow-lg" alt="Lagos Delivery Fleet">
                         <div class="bg-white p-4 shadow-sm rounded-3 position-absolute bottom-0 start-0 m-3 d-none d-md-block" style="border-left: 5px solid var(--primary-wine);">
                             <p class="fw-bold mb-0">Running businesses nationwide since 2010.</p>
                         </div>
