--- a/template_one/client/billing.html
+++ b/template_one/client/billing.html
@@ -80,7 +80,7 @@
             <a class="nav-link" href="inventory.html"><i class="bi bi-archive"></i> Inventory</a>
             <a class="nav-link" href="orders.html"><i class="bi bi-truck"></i> Orders</a>
             <a class="nav-link" href="reports.html"><i class="bi bi-bar-chart"></i> Reports</a>
-            <a class="nav-link active" href="billing.html"><i class="bi bi-credit-card"></i> Billing</a>
+            <a class="nav-link active" href="billing.html"><i class="bi bi-credit-card"></i> Transactions</a>
             <hr class="mx-3 opacity-25">
             <a class="nav-link" href="account.html"><i class="bi bi-person-gear"></i> Account</a>
             <a class="nav-link" href="support.html"><i class="bi bi-headset"></i> Support</a>
@@ -89,9 +89,9 @@
     </div>
 
     <div class="main-content">
-        <h3 class="fw-bold mb-4">Billing & Invoices</h3>
+        <h3 class="fw-bold mb-4">Transactions</h3>
 
-        <div class="row g-4 mb-4">
+        <!-- <div class="row g-4 mb-4">
             <div class="col-md-7">
                 <div class="card balance-card p-4 shadow-sm h-100">
                     <div class="row align-items-center">
@@ -123,7 +123,7 @@
                     <button class="btn btn-outline-dark btn-sm w-100">+ Add New Method</button>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="card invoice-card p-4">
             <div class="d-flex justify-content-between align-items-center mb-4">
@@ -178,10 +178,10 @@
                 <div class="modal-body p-4 text-center">
                     <p class="mb-4">Select your preferred payment gateway</p>
                     <button class="btn btn-outline-primary w-100 mb-3 py-3 d-flex justify-content-center align-items-center">
-                        <i class="bi bi-credit-card me-2"></i> Pay with Stripe
+                        <i class="bi bi-credit-card me-2"></i> Pay with Zeetenpay
                     </button>
                     <button class="btn btn-outline-warning w-100 mb-3 py-3 d-flex justify-content-center align-items-center">
-                        <i class="bi bi-paypal me-2"></i> Pay with PayPal
+                        <i class="bi bi-paypal me-2"></i> Pay with Bank Account
                     </button>
                     <p class="smaller text-muted">Transactions are encrypted and secure.</p>
                 </div>
