--- a/template_one/home.html
+++ b/template_one/home.html
@@ -58,7 +58,7 @@
         .hero-section {
             height: 90vh;
             background: linear-gradient(rgba(70, 130, 180, 0.4), rgba(135, 206, 235, 0.4)), 
-                        url('images/2151998729.jpg');
+                        url('images/61190.png');
             background-size: cover;
             background-position: center;
             display: flex;
@@ -234,7 +234,7 @@
             
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6" data-aos="fade-right">
-                    <img src="images/129881.jpg" alt="Secure Warehouse Facility" class="detail-img">
+                    <img src="images/2149095891.jpg" alt="Secure Warehouse Facility" class="detail-img">
                 </div>
                 <div class="col-lg-6 ps-lg-5" data-aos="fade-left">
                     <h3 class="text-info"><i class="bi bi-shield-lock me-2"></i>24/7 Security & Climate Control</h3>
@@ -254,7 +254,7 @@
 
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6" data-aos="fade-right">
-                    <img src="images/2151998729.jpg" alt="Heavy Cargo Trucks on Highway" class="detail-img">
+                    <img src="images/61188.png" alt="Heavy Cargo Trucks on Highway" class="detail-img">
                 </div>
                 <div class="col-lg-6 ps-lg-5" data-aos="fade-left">
                     <h3 class="text-info"><i class="bi bi-geo-alt me-2"></i>Strategic Location</h3>
@@ -264,7 +264,7 @@
 
             <div class="row align-items-center flex-row-reverse">
                 <div class="col-lg-6" data-aos="fade-left">
-                    <img src="images/89061.jpg" alt="Logistics Terminal and Tracking" class="detail-img">
+                    <img src="images/129881.jpg" alt="Logistics Terminal and Tracking" class="detail-img">
                 </div>
                 <div class="col-lg-6 pe-lg-5" data-aos="fade-right">
                     <h3 class="text-info"><i class="bi bi-graph-up-arrow me-2"></i>Real-Time Inventory Tracking</h3>
