--- a/template_one/services.html
+++ b/template_one/services.html
@@ -42,7 +42,7 @@
         /* Hero Header */
         .services-hero {
             background: linear-gradient(rgba(70, 130, 180, 0.4), rgba(135, 206, 235, 0.4)), 
-                        url('images/2151998729.jpg');
+                        url('images/2169.jpg');
             background-size: cover;
             background-position: center;
             padding: 100px 0;
@@ -192,7 +192,7 @@
             <div class="row g-4">
                 <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
                     <div class="service-item">
-                         <img src="images/2151468934.jpg" alt="Secure Warehouse Storage Facility">
+                         <img src="images/77653.jpg" alt="Secure Warehouse Storage Facility">
                         <div class="service-content">
                             <h3><i class="bi bi-shield-check me-2"></i>Free Secured Storage</h3>
                             <p>Protect your valuable inventory in our state-of-the-art, high-security warehouse facilities. We offer complimentary, climate-controlled storage solutions designed to keep your products safe from damage, theft, and environmental factors. Our 24/7 surveillance, restricted access, and advanced inventory management systems ensure peace of mind, allowing you to focus on your core business without the burden of storage costs or risks.</p>
@@ -202,7 +202,7 @@
 
                 <div class="col-lg-6" data-aos="fade-left" data-aos-delay="200">
                     <div class="service-item">
-                         <img src="images/77653.jpg" alt="Professional Product Packaging">
+                         <img src="images/2149095891.jpg" alt="Professional Product Packaging">
                         <div class="service-content">
                             <h3><i class="bi bi-box-seam me-2"></i>Professional Packaging</h3>
                             <p>First impressions matter. Our expert team ensures that every item is meticulously packaged using high-quality materials, tailored to the specific needs of your product. From fragile goods requiring extra cushioning to efficient bulk packaging, we prioritize secure transit and pristine presentation. Professional packaging not only safeguards your goods but also enhances your brand's reputation with every delivery.</p>
@@ -212,7 +212,7 @@
 
                 <div class="col-lg-6" data-aos="fade-right" data-aos-delay="300">
                     <div class="service-item">
-                         <img src="images/4279.jpg" alt="Fast Delivery Van">
+                         <img src="images/61188.png" alt="Fast Delivery Van">
                         <div class="service-content">
                             <h3><i class="bi bi-truck me-2"></i>Delivery on Order</h3>
                             <p>Speed and reliability are at the core of our delivery services. Once an order is placed, our efficient system ensures prompt processing and dispatch. We manage the entire delivery logistics, guaranteeing that your products reach your customers quickly and in perfect condition. Our optimized routes and dedicated fleet mean timely deliveries that boost customer satisfaction and loyalty.</p>
