--- a/template_one/client/inventory.html
+++ b/template_one/client/inventory.html
@@ -115,7 +115,7 @@
             <a class="nav-link active" href="inventory.html"><i class="bi bi-archive"></i> Inventory</a>
             <a class="nav-link" href="orders.html"><i class="bi bi-truck"></i> Orders</a>
             <a class="nav-link" href="reports.html"><i class="bi bi-bar-chart"></i> Reports</a>
-            <a class="nav-link" href="billing.html"><i class="bi bi-credit-card"></i> Billing</a>
+            <a class="nav-link" href="billing.html"><i class="bi bi-credit-card"></i> Transactions</a>
             <hr class="mx-3 opacity-25">
             <a class="nav-link" href="account.html"><i class="bi bi-person-gear"></i> Account</a>
             <a class="nav-link" href="support.html"><i class="bi bi-headset"></i> Support</a>
